2008-11-27  Ethan Merritt  <merritt@u.washington.edu>

	* src/datafile.c (df_set_datafile_binary plot_option_binary_format
	plot_option_binary): Restore tracking of default binary filetype.
	Issue error rather than segfaulting on unsupported command
	"set datafile binary format=...".
	Bug #2345499

2008-11-23  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/README: Updated.

	* config/makefile.cyg config/makefile.mgw: Choose *.exe targets in
	makefile.cyg as in makefile.mgw.

2008-11-22  Ethan Merritt  <merritt@u.washington.edu>

	* term/svg.trm: Work around two bugs in current svg implementations.
	The setting of xml:space="preserve" is not correctly inherited from the
	enviroment, so we must set it explicitly for each text fragment.
	Resetting dy="foo" after a sub- or superscript is best done inside the
	same text block.

2008-11-21  Petr Mikulik  <mikulik@physics.muni.cz>

	* config/makefile.mgw: Targets are wgnuplot.exe, wgnuplot_pipes.exe,
	gnuplot.exe; pgnuplot.exe is kept as it was until now.

2008-11-19  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm (PNG_options): If no information is available about what
	default scalable font might be available we currently give up and fall
	back to a built in non-scalable font.  Now we try font "arial" before
	falling back.  Who knows, it might even be available.

2008-11-15  Ethan Merritt  <merritt@u.washington.edu>

	* src/bitmap.c src/bitmap.h src/tables.c src/tables.h src/show.c
	term/cgm.trm term/gd.trm term/pdf.trm:
	Consolidate the list of RGB color names and the list of RGB colors used
	for palette construction into a single table. Generalize the colorname
	dump routine so that it will be able to handle additional color lists.

2008-11-11  Philipp K Janert  <janert@ieee.org>
	
	* src/interpol.c (eval_kdensity): Fixing minor defect.

	* docs/gnuplot.doc docs/gnuplot.texi: Include smoothing 
	algos in New Features section.
	
2008-11-07  Petr Mikulik  <mikulik@physics.muni.cz>
